fixed footer spacing

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -192,8 +192,8 @@ body {
 }
 
 .footerSpace {
-    height: 55px;
-    margin-bottom: 55px;
+/*    height: 55px;*/
+    margin-bottom: 64px;
 }
 
 .subSideAction {
